# terminalcancer

./: .gitignore  CMakeLists.txt  build.sh  build_and_run.sh  configure.sh  install.sh  run.sh  submodule_init.sh  submodule_update.sh  test.sh
include/terminalcancer/: terminalcancer.hpp
src/: terminalcancer.cpp
tests/: test.cpp
